# mastfm

./: .gitignore  LICENSE  README.md  setup.cfg
src/mastfm/: MASTFM.py  __init__.py
src/mastfm/utils/: ForecastingModel.py  MetaModel.py  PrepareDataset.py  TimeSeriesGenerator.py
test/: README.md
