[metadata]
name = mastfm
version = 0.0.1
author = Ricardo Inácio
description = A package for Meta-learning and data Augmentation for Stress Testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ricardoinaciopt/mastfm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy==1.26
    pandas==2.2.2
    scikit-learn>=1.5.2
    shap>=0.46.0
    imbalanced-learn>=0.12.4
    matplotlib>=3.9.2
    xgboost>=2.1.1
    lightgbm>=4.5.0
    tqdm
    mlforecast>=0.13.4
    metaforecast>=0.1.6
    

[options.packages.find]
where = src
